--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="dist/styles.css">
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:300,500' rel='stylesheet' type='text/css'>
-	<title></title>
+	<title>UiO Eksamenskalender</title>
 </head>
 <body>
 	<div id="app"></div>
